mobile fix - centered image z-index

--- a/css/main.css
+++ b/css/main.css
@@ -1817,10 +1817,11 @@ h4{
     height: 280px;
     transform: translateX(-124px) scale(1);
     transition: transform 0.4s ease;
+    z-index: 15;
 }
  .content {
     width: 100%;
-    height: 150px;
+    height: 125px;
     position: absolute;
     bottom: 0px;
     left: 20px;
